--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>org.fujion.webjars</groupId>
 		<artifactId>fujion-webjars</artifactId>
-		<version>3.0.0</version>
+		<version>3.2.0-SNAPSHOT</version>
 	</parent>
 
 	<name>cleave.js Input Formatting Library</name>
 	<artifactId>webjar-cleave-js</artifactId>
-	<version>1.6.0-10</version>
+	<version>1.6.0-11</version>
 	<description>Input text formatting library.</description>
 
 	<properties>
