--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,34 @@
 
 	<name>cleave.js Input Formatting Library</name>
 	<artifactId>webjar-cleave-js</artifactId>
-	<version>1.6.0-11</version>
+	<version>1.6.0-11-SNAPSHOT</version>
 	<description>Input text formatting library.</description>
 
 	<properties>
 		<skip.minification.js>false</skip.minification.js>
+		<npm-install.skip>false</npm-install.skip>
 	</properties>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.fujion.webjars</groupId>
+				<artifactId>webjar-validator-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>validate-webjar</id>
+						<configuration>
+							<rules>
+								<rule>dir_exists dist/addons</rule>
+								<rule>file_exists dist/cleave.js</rule>
+								<rule>file_exists import-map.json</rule>
+								<rule>file_contains LICENSE "Apache License"</rule>
+								<rule>file_exists README.md</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
