--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 	<description>Input text formatting library.</description>
 
 	<properties>
-		<skip.minification.js>false</skip.minification.js>
 		<npm-install.skip>false</npm-install.skip>
 	</properties>
 
@@ -44,20 +43,11 @@
 						<id>precompile</id>
 						<configuration>
 							<target>
-								<copy tofile="${src.rootdir}/package.json" file="${basedir}/package-template.json">
+								<copy todir="${src.rootdir}">
+									<fileset dir="${basedir}/staging" />
 									<filterchain>
 										<expandproperties />
 									</filterchain>
-								</copy>
-							</target>
-						</configuration>
-					</execution>
-					<execution>
-						<id>postcompile</id>
-						<configuration>
-							<target>
-								<copy todir="${webjar.target}">
-									<fileset dir="${src.rootdir}/node_modules/cleave.js" includes="LICENSE,README.md,dist/" />
 								</copy>
 							</target>
 						</configuration>
