--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,6 @@
 	<version>1.6.0-11-SNAPSHOT</version>
 	<description>Input text formatting library.</description>
 
-	<properties>
-		<npm-install.skip>false</npm-install.skip>
-	</properties>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -23,7 +19,7 @@
 				<artifactId>webjar-validator-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>validate-webjar</id>
+						<id>webjar-validate</id>
 						<configuration>
 							<rules>
 								<rule>dir_exists dist/addons</rule>
@@ -43,7 +39,7 @@
 						<id>precompile</id>
 						<configuration>
 							<target>
-								<copy todir="${src.rootdir}">
+								<copy todir="${webjar.staging}">
 									<fileset dir="${basedir}/staging" />
 									<filterchain>
 										<expandproperties />
